force-app/main/default/objects/CreditMemoLine__c/CreditMemoLine__c.object-meta.xml
<CustomObject>
    <description>Ligne d&apos;avoir basée sur la modélisation des factures du module Salesforce Billing</description>
    <label>Ligne d&apos;avoir</label>
    <nameField>
        <displayFormat>LAVR/{YYYY}/{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lignes d&apos;avoir</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>