force-app/main/default/objects/CreditMemoLine__c/fields/amount__c.field-meta.xml
<CustomField>
    <fullName>amount__c</fullName>
    <label>Montant total (TTC)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>