force-app/main/default/objects/CreditMemoLine__c/fields/asset__c.field-meta.xml
<CustomField>
    <fullName>asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actif</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Lignes d&apos;avoir</relationshipLabel>
    <relationshipName>CreditMemoLines</relationshipName>
    <type>Lookup</type>
</CustomField>