force-app/main/default/objects/CreditMemoLine__c/fields/creditMemo__c.field-meta.xml
<CustomField>
    <fullName>creditMemo__c</fullName>
    <label>Avoir</label>
    <referenceTo>CreditMemo__c</referenceTo>
    <relationshipLabel>Lignes d&apos;avoir</relationshipLabel>
    <relationshipName>CreditMemoLines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>