force-app/main/default/objects/CreditMemoLine__c/fields/invoice__c.field-meta.xml
<CustomField>
    <fullName>invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facture</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Lignes d&apos;avoir</relationshipLabel>
    <relationshipName>CreditMemoLines_del</relationshipName>
    <type>Lookup</type>
</CustomField>