force-app/main/default/objects/CreditMemoLine__c/fields/invoiceLine__c.field-meta.xml
<CustomField>
    <fullName>invoiceLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ligne de la facture</label>
    <referenceTo>InvoiceLine__c</referenceTo>
    <relationshipLabel>Lignes d&apos;avoir</relationshipLabel>
    <relationshipName>CreditMemoLines</relationshipName>
    <type>Lookup</type>
</CustomField>