force-app/main/default/objects/CreditMemoLine__c/fields/isCreditMemoLocked__c.field-meta.xml
<CustomField>
    <fullName>isCreditMemoLocked__c</fullName>
    <formula>creditMemo__r.isCreditMemoLocked__c</formula>
    <label>[#] Avoir verrouillé</label>
    <type>Checkbox</type>
</CustomField>