force-app/main/default/objects/CreditMemoLine__c/fields/label__c.field-meta.xml
<CustomField>
    <fullName>label__c</fullName>
    <label>Libellé de la ligne</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>