force-app/main/default/objects/CreditMemoLine__c/fields/orderItem__c.field-meta.xml
<CustomField>
    <fullName>orderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ligne de commande client</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Lignes d&apos;avoir</relationshipLabel>
    <relationshipName>CreditMemoLines</relationshipName>
    <type>Lookup</type>
</CustomField>