force-app/main/default/objects/CreditMemoLine__c/fields/pretaxAmount__c.field-meta.xml
<CustomField>
    <fullName>pretaxAmount__c</fullName>
    <label>Montant total (HT)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>