force-app/main/default/objects/CreditMemoLine__c/fields/product__c.field-meta.xml
<CustomField>
    <fullName>product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Lignes d&apos;avoir</relationshipLabel>
    <relationshipName>CreditMemoLines</relationshipName>
    <type>Lookup</type>
</CustomField>