force-app/main/default/objects/CreditMemoLine__c/fields/reason__c.field-meta.xml
<CustomField>
    <fullName>reason__c</fullName>
    <label>Motif d&apos;avoir</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annulation facture</fullName>
            </value>
            <value>
                <fullName>Avoir commercial</fullName>
            </value>
            <value>
                <fullName>Avoir technique</fullName>
            </value>
            <value>
                <fullName>Défaut KparK</fullName>
            </value>
            <value>
                <fullName>Défaut usine</fullName>
            </value>
            <value>
                <fullName>Erreur Métrage</fullName>
            </value>
            <value>
                <fullName>Modification contrat</fullName>
            </value>
            <value>
                <fullName>Motif Administratif</fullName>
            </value>
            <value>
                <fullName>Prestation non-conforme</fullName>
            </value>
            <value>
                <fullName>Protocole avec avoir</fullName>
            </value>
            <value>
                <fullName>Retard livraison</fullName>
            </value>
            <value>
                <fullName>Retard installation KparK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>