force-app/main/default/objects/CreditMemoLine__c/fields/unitPrice__c.field-meta.xml
<CustomField>
    <fullName>unitPrice__c</fullName>
    <label>Prix unitaire (HT)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>