force-app/main/default/objects/CreditMemoLine__c/fields/VATAmount__c.field-meta.xml
<CustomField>
    <fullName>VATAmount__c</fullName>
    <label>Montant TVA</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>