force-app/main/default/objects/CreditMemoLine__c/validationRules/VR_K3_CreditMemoLine_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CreditMemoLine_Amount</fullName>
    <active>true</active>
    <description>Le montant TTC est obligatoire et doit être supérieur à 0!</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
(
				ISNULL( amount__c ) ||
				amount__c &lt;= 0
) &amp;&amp;
creditMemo__r.isLegacy__c == false</errorConditionFormula>
    <errorDisplayField>amount__c</errorDisplayField>
    <errorMessage>Le montant TTC est obligatoire et doit être supérieur à 0!</errorMessage>
</ValidationRule>