force-app/main/default/objects/CreditMemoLine__c/validationRules/VR_K3_CreditMemoLine_CantCreateorUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CreditMemoLine_CantCreateorUpdate</fullName>
    <active>false</active>
    <description>Impossible de modifier ou de créer une ligne d&apos;avoir si l&apos;avoir a une date de référence</description>
    <errorConditionFormula>$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
NOT(ISBLANK(creditMemo__r.creditMemoDate__c))</errorConditionFormula>
    <errorMessage>Impossible de modifier ou de créer une ligne d&apos;avoir si l&apos;avoir a une date de référence.</errorMessage>
</ValidationRule>