force-app/main/default/objects/CreditMemoLine__c/validationRules/VR_K3_CreditMemoLine_InvoiceLine.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CreditMemoLine_InvoiceLine</fullName>
    <active>true</active>
    <description>Le champ ligne de facture est obligatoire si l&apos;avoir est de type &quot;Facture&quot;</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
ISBLANK( invoiceLine__c ) &amp;&amp;
creditMemo__r.RecordType.DeveloperName == &apos;InvoiceCreditMemo&apos; &amp;&amp;
creditMemo__r.isLegacy__c == false</errorConditionFormula>
    <errorDisplayField>invoiceLine__c</errorDisplayField>
    <errorMessage>La ligne de facture est obligatoire si l&apos;avoir est de type &quot;Facture&quot;</errorMessage>
</ValidationRule>