force-app/main/default/objects/CreditMemoLine__c/validationRules/VR_K3_CreditMemoLine_InvoiceRecordType.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CreditMemoLine_InvoiceRecordType</fullName>
    <active>true</active>
    <description>Une ligne d&apos;avoir ne peut pas être liée à une ligne de facture d&apos;acompte</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
creditMemo__r.isLegacy__c == false &amp;&amp;
NOT(ISBLANK( invoiceLine__c )) &amp;&amp;
NOT(ISBLANK( invoiceLine__r.invoice__c )) &amp;&amp;
invoiceLine__r.invoice__r.RecordType.DeveloperName != &apos;Invoice&apos;</errorConditionFormula>
    <errorDisplayField>invoiceLine__c</errorDisplayField>
    <errorMessage>Une ligne d&apos;avoir ne peut pas être liée à une ligne de facture d&apos;acompte!</errorMessage>
</ValidationRule>