force-app/main/default/objects/CreditMemoLine__c/validationRules/VR_K3_CreditMemoLine_LineNumberRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CreditMemoLine_LineNumberRequired</fullName>
    <active>true</active>
    <description>Le numéro de ligne est obligatoire sauf pour les lignes historiques</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
ISBLANK( lineNumber__c ) &amp;&amp;
creditMemo__r.isLegacy__c == false</errorConditionFormula>
    <errorDisplayField>lineNumber__c</errorDisplayField>
    <errorMessage>Le numéro de ligne est obligatoire!</errorMessage>
</ValidationRule>