force-app/main/default/objects/CreditMemoLine__c/validationRules/VR_K3_CreditMemoLine_OrderIsLocked.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CreditMemoLine_OrderIsLocked</fullName>
    <active>true</active>
    <description>Impossible de modifier/créer une ligne de d&apos;avoir si la commande client est verrouillée</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
isOrderLocked__c &amp;&amp;
creditMemo__r.isLegacy__c == false</errorConditionFormula>
    <errorMessage>Impossible de modifier/créer une ligne d&apos;avoir si la commande client est verrouillée</errorMessage>
</ValidationRule>