force-app/main/default/objects/CreditMemoLine__c/validationRules/VR_K3_CreditMemoLine_OrderSameInvoice.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CreditMemoLine_OrderSameInvoice</fullName>
    <active>true</active>
    <description>La ligne de commande ne correspond pas celle de la ligne de facture!</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
NOT(ISBLANK( orderItem__c )) &amp;&amp;
NOT(ISBLANK( invoiceLine__c )) &amp;&amp;
orderItem__c != invoiceLine__r.orderItem__c &amp;&amp;
creditMemo__r.RecordType.DeveloperName == &apos;InvoiceCreditMemo&apos; &amp;&amp;
creditMemo__r.isLegacy__c == false</errorConditionFormula>
    <errorDisplayField>orderItem__c</errorDisplayField>
    <errorMessage>La ligne de commande ne correspond pas celle de la ligne de facture!</errorMessage>
</ValidationRule>