force-app/main/default/objects/CreditMemoLine__c/validationRules/VR_K3_CreditMemoLine_PretaxAmount.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CreditMemoLine_PretaxAmount</fullName>
    <active>true</active>
    <description>Le montant HT est obligatoire et doit être supérieur à 0!</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
(
				ISNULL( pretaxAmount__c ) ||
				pretaxAmount__c &lt;= 0
) &amp;&amp;
creditMemo__r.isLegacy__c == false</errorConditionFormula>
    <errorDisplayField>pretaxAmount__c</errorDisplayField>
    <errorMessage>Le montant HT est obligatoire et doit être supérieur à 0!</errorMessage>
</ValidationRule>