force-app/main/default/objects/CreditMemoLine__c/validationRules/VR_K3_CreditMemoLine_ProductRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CreditMemoLine_ProductRequired</fullName>
    <active>true</active>
    <description>Le produit est obligatoire si le type d&apos;enregistrement de l&apos;avoir est &quot;Avoir de facture&quot;</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
ISBLANK( product__c ) &amp;&amp;
creditMemo__r.RecordType.DeveloperName == &apos;InvoiceCreditMemo&apos; &amp;&amp;
creditMemo__r.isLegacy__c == false</errorConditionFormula>
    <errorDisplayField>product__c</errorDisplayField>
    <errorMessage>Le produit est obligatoire!</errorMessage>
</ValidationRule>