force-app/main/default/objects/CreditMemoLine__c/validationRules/VR_K3_CreditMemoLine_ProductSameOrder.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CreditMemoLine_ProductSameOrder</fullName>
    <active>true</active>
    <description>Le produit doit être le même que celui de la ligne de commande référencée</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
NOT(ISBLANK( product__c )) &amp;&amp;
NOT(ISBLANK( orderItem__c )) &amp;&amp;
product__c != orderItem__r.Product2Id &amp;&amp;
creditMemo__r.RecordType.DeveloperName == &apos;InvoiceCreditMemo&apos; &amp;&amp;
creditMemo__r.isLegacy__c == false</errorConditionFormula>
    <errorDisplayField>product__c</errorDisplayField>
    <errorMessage>Le produit ne correspond pas celui de la ligne de commande!</errorMessage>
</ValidationRule>