force-app/main/default/objects/CreditMemoLine__c/validationRules/VR_K3_CreditMemoLine_ReasonRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CreditMemoLine_ReasonRequired</fullName>
    <active>true</active>
    <description>Le motif d&apos;avoir est obligatoire sauf pour les lignes historiques</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
ISBLANK( legacyReference__c ) &amp;&amp; 
ISBLANK( TEXT(reason__c) ) &amp;&amp;
creditMemo__r.isLegacy__c == false</errorConditionFormula>
    <errorDisplayField>reason__c</errorDisplayField>
    <errorMessage>Le motif d&apos;avoir est obligatoire!</errorMessage>
</ValidationRule>