force-app/main/default/objects/CreditMemoLine__c/validationRules/VR_K3_CreditMemoLine_UnitPriceReqGreat0.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CreditMemoLine_UnitPriceReqGreat0</fullName>
    <active>true</active>
    <description>Le prix unitaire HT et obligatoire et doit être supérieur ou égal à 0.</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
creditMemo__r.isLegacy__c == false &amp;&amp;
( ISNULL(unitPrice__c) || unitPrice__c &lt; 0 )</errorConditionFormula>
    <errorDisplayField>unitPrice__c</errorDisplayField>
    <errorMessage>Le prix unitaire HT et obligatoire et doit être supérieur ou égal à 0!</errorMessage>
</ValidationRule>