force-app/main/default/objects/CreditMemoLine__c/validationRules/VR_K3_CreditMemoLine_VATAmount.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CreditMemoLine_VATAmount</fullName>
    <active>true</active>
    <description>Le champ montant TVA obligatoire et supérieur ou égal à 0</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
(
				ISNULL( VATAmount__c ) ||
				VATAmount__c &lt;= 0
) &amp;&amp;
creditMemo__r.isLegacy__c == false</errorConditionFormula>
    <errorDisplayField>VATAmount__c</errorDisplayField>
    <errorMessage>Le montant TVA est obligatoire et doit être supérieur à 0!</errorMessage>
</ValidationRule>