force-app/main/default/objects/CreditMemoLine__c/validationRules/VR_K3_CreditMemoLine_VATRate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_CreditMemoLine_VATRate</fullName>
    <active>true</active>
    <description>Le champ taux TVA obligatoire et supérieur ou égal à 0</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
(
				ISNULL( VATRate__c ) ||
				VATRate__c &lt;= 0
) &amp;&amp;
creditMemo__r.isLegacy__c == false</errorConditionFormula>
    <errorDisplayField>VATRate__c</errorDisplayField>
    <errorMessage>Le taux TVA est obligatoire et doit être supérieur à 0!</errorMessage>
</ValidationRule>